; ModuleID = '/home/carl/AnghaBench/stb/extr_stb_vorbis.c_convert_channels_short_interleaved.c'
source_filename = "/home/carl/AnghaBench/stb/extr_stb_vorbis.c_convert_channels_short_interleaved.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@temp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i16*, i32, float**, i32, i32)* @convert_channels_short_interleaved to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @convert_channels_short_interleaved(i32 %0, i16* %1, i32 %2, float** %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i16*, align 8
  %9 = alloca i32, align 4
  %10 = alloca float**, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca float, align 4
  %17 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i16* %1, i16** %8, align 8
  store i32 %2, i32* %9, align 4
  store float** %3, float*** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %18 = call i32 (...) @check_endianness()
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %9, align 4
  %21 = icmp ne i32 %19, %20
  br i1 %21, label %22, label %48

22:                                               ; preds = %6
  %23 = load i32, i32* %7, align 4
  %24 = icmp sle i32 %23, 2
  br i1 %24, label %25, label %48

25:                                               ; preds = %22
  %26 = load i32, i32* %9, align 4
  %27 = icmp sle i32 %26, 6
  br i1 %27, label %28, label %48

28:                                               ; preds = %25
  %29 = load i32, i32* %7, align 4
  %30 = icmp eq i32 %29, 2
  %31 = zext i1 %30 to i32
  %32 = call i32 @assert(i32 %31)
  store i32 0, i32* %13, align 4
  br label %33

33:                                               ; preds = %44, %28
  %34 = load i32, i32* %13, align 4
  %35 = load i32, i32* %7, align 4
  %36 = icmp slt i32 %34, %35
  br i1 %36, label %37, label %47

37:                                               ; preds = %33
  %38 = load i16*, i16** %8, align 8
  %39 = load i32, i32* %9, align 4
  %40 = load float**, float*** %10, align 8
  %41 = load i32, i32* %11, align 4
  %42 = load i32, i32* %12, align 4
  %43 = call i32 @compute_stereo_samples(i16* %38, i32 %39, float** %40, i32 %41, i32 %42)
  br label %44

44:                                               ; preds = %37
  %45 = load i32, i32* %13, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %13, align 4
  br label %33

47:                                               ; preds = %33
  br label %116

48:                                               ; preds = %25, %22, %6
  %49 = load i32, i32* %7, align 4
  %50 = load i32, i32* %9, align 4
  %51 = icmp slt i32 %49, %50
  br i1 %51, label %52, label %54

52:                                               ; preds = %48
  %53 = load i32, i32* %7, align 4
  br label %56

54:                                               ; preds = %48
  %55 = load i32, i32* %9, align 4
  br label %56

56:                                               ; preds = %54, %52
  %57 = phi i32 [ %53, %52 ], [ %55, %54 ]
  store i32 %57, i32* %14, align 4
  store i32 0, i32* %15, align 4
  br label %58

58:                                               ; preds = %112, %56
  %59 = load i32, i32* %15, align 4
  %60 = load i32, i32* %12, align 4
  %61 = icmp slt i32 %59, %60
  br i1 %61, label %62, label %115

62:                                               ; preds = %58
  store i32 0, i32* %13, align 4
  br label %63

63:                                               ; preds = %97, %62
  %64 = load i32, i32* %13, align 4
  %65 = load i32, i32* %14, align 4
  %66 = icmp slt i32 %64, %65
  br i1 %66, label %67, label %100

67:                                               ; preds = %63
  %68 = load i32, i32* @temp, align 4
  %69 = call i32 @FASTDEF(i32 %68)
  %70 = load float**, float*** %10, align 8
  %71 = load i32, i32* %13, align 4
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds float*, float** %70, i64 %72
  %74 = load float*, float** %73, align 8
  %75 = load i32, i32* %11, align 4
  %76 = load i32, i32* %15, align 4
  %77 = add nsw i32 %75, %76
  %78 = sext i32 %77 to i64
  %79 = getelementptr inbounds float, float* %74, i64 %78
  %80 = load float, float* %79, align 4
  store float %80, float* %16, align 4
  %81 = load i32, i32* @temp, align 4
  %82 = load float, float* %16, align 4
  %83 = call i32 @FAST_SCALED_FLOAT_TO_INT(i32 %81, float %82, i32 15)
  store i32 %83, i32* %17, align 4
  %84 = load i32, i32* %17, align 4
  %85 = add nsw i32 %84, 32768
  %86 = icmp ugt i32 %85, 65535
  br i1 %86, label %87, label %92

87:                                               ; preds = %67
  %88 = load i32, i32* %17, align 4
  %89 = icmp slt i32 %88, 0
  %90 = zext i1 %89 to i64
  %91 = select i1 %89, i32 -32768, i32 32767
  store i32 %91, i32* %17, align 4
  br label %92

92:                                               ; preds = %87, %67
  %93 = load i32, i32* %17, align 4
  %94 = trunc i32 %93 to i16
  %95 = load i16*, i16** %8, align 8
  %96 = getelementptr inbounds i16, i16* %95, i32 1
  store i16* %96, i16** %8, align 8
  store i16 %94, i16* %95, align 2
  br label %97

97:                                               ; preds = %92
  %98 = load i32, i32* %13, align 4
  %99 = add nsw i32 %98, 1
  store i32 %99, i32* %13, align 4
  br label %63

100:                                              ; preds = %63
  br label %101

101:                                              ; preds = %108, %100
  %102 = load i32, i32* %13, align 4
  %103 = load i32, i32* %7, align 4
  %104 = icmp slt i32 %102, %103
  br i1 %104, label %105, label %111

105:                                              ; preds = %101
  %106 = load i16*, i16** %8, align 8
  %107 = getelementptr inbounds i16, i16* %106, i32 1
  store i16* %107, i16** %8, align 8
  store i16 0, i16* %106, align 2
  br label %108

108:                                              ; preds = %105
  %109 = load i32, i32* %13, align 4
  %110 = add nsw i32 %109, 1
  store i32 %110, i32* %13, align 4
  br label %101

111:                                              ; preds = %101
  br label %112

112:                                              ; preds = %111
  %113 = load i32, i32* %15, align 4
  %114 = add nsw i32 %113, 1
  store i32 %114, i32* %15, align 4
  br label %58

115:                                              ; preds = %58
  br label %116

116:                                              ; preds = %115, %47
  ret void
}

declare dso_local i32 @check_endianness(...) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @compute_stereo_samples(i16*, i32, float**, i32, i32) #1

declare dso_local i32 @FASTDEF(i32) #1

declare dso_local i32 @FAST_SCALED_FLOAT_TO_INT(i32, float, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
